changed background colors for the portfolio

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #a3a2a2;
+$secondary-color: #2858c0;
 
 $white-color: #fff;
 
